--- a/clipdown/2023/webview/reward/resource/css/style_cashmate.css
+++ b/clipdown/2023/webview/reward/resource/css/style_cashmate.css
@@ -114,7 +114,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 
 /* Point Badge Style */
 .badge_point{display: inline-block; position: relative; min-width: 78px; height: 32px; background: #e21d19; color: #fff; text-align: center; line-height: 1.5; border-radius: 30px; padding: 4px 4px 4px 29px; -webkit-touch-callout: none; user-select: none;}
-.badge_point .icon_point{position: absolute; top:6px; left: 4px; width: 20px; height: 20px; background: #fff; color: #e21d19; font-weight: 700; line-height: 1; border-radius:50%; padding: 4px 4px;}
+.badge_point .icon_point{position: absolute; top:6px; left: 4px; width: 20px; height: 20px; background: #fff; color: #e21d19;  font-size: 14px; font-size: 1.4rem; font-weight: 700; line-height: 1; border-radius:50%; padding: 3px 4px;}
 .badge_point .point_data{font-weight: 700; line-height: 2; padding: 0 6px 0 0;}
 
 /* Button Style */
