--- a/clipdown/2023/webview/reward/resource/css/style_inflmate.css
+++ b/clipdown/2023/webview/reward/resource/css/style_inflmate.css
@@ -14,7 +14,7 @@
 
 body{background: #202020;}
 .font_num{font-family: 'Poppins', Malgun Gothic, sans-serif; font-weight: 500;}
-.join_info{max-height: 340px;}
+.join_info{max-height: 350px;}
 
 /* 정리필요 스타일 */
 .join_info .btn_primary{display: block; background: #1a73e8; color: #fff; font-weight: 400; border-radius: 5px; padding: 8px 20px;} 
@@ -46,7 +46,7 @@ body{background: #202020;}
 .webview_box .content_box .content_item{margin: 20px 0 0;}
 .webview_box_header{position: relative; margin-bottom: -1px;}
 .webview_box_header .content_top_img{}
-
+.webview_box .item_empty{padding: 10px 0;}
 
 .join_info .profile_img{display: flex; align-items: center; justify-content: center;}
 .join_info .profile_img img{height: 40px;}
@@ -66,7 +66,7 @@ body{background: #202020;}
 .form_join .form_list .form_group{margin: 0; padding: 5px 0 0;}
 
 .help_block{display: block; margin: 5px 0;}
-.help_text{font-size: 11px; font-size: 1.1rem; color:#757575;}
+.help_text{font-size: 11px; font-size: 1.1rem; color:#666;}
 
 /* Button Style */
 .webview_box .btn{min-width: 110px; font-weight: 600; border-radius: 50px;}
@@ -98,7 +98,7 @@ body{background: #202020;}
 .login_info .join_link{border-top: 1px solid #eee; padding: 10px 0 0px;}
 .login_info .content_box .content_item.form_auth{margin:10px 0;}
 .login_info .content_box .content_item.form_auth .btn_area{margin: 15px 0 10px;}
-.login_info .guide_text{font-size:10px; font-size:1rem; letter-spacing: -1px;}
+.login_info .guide_text{font-size:11px; font-size:1.1rem; letter-spacing: -1px;}
 .login_info .guide_text .text_link{font-size:10px; font-size:1rem;}
 
 /* webview 팝업 회원가입 안내 스타일 */
@@ -109,7 +109,7 @@ body{background: #202020;}
 .join_info .form_auth .form_group{margin-bottom: 10px;}
 .join_info .form_auth .text_link{font-size:11px; font-size:1.1rem; color: #1a73e8;}
 
-.btn_wv_info{font-family: 'Roboto', sans-serif; color:#757575; font-size: 14px; font-size: 1.4rem; font-weight: 500; text-align: center;}
+.btn_wv_info{font-family: 'Roboto', sans-serif; color:#666; font-size: 14px; font-size: 1.4rem; font-weight: 500; text-align: center;}
 .btn_login_google{font-family: 'Roboto', sans-serif; width: 100%; background: #fff url("../images/icon_login_google.png") no-repeat 2rem 50%; background-size: 18px auto; padding: 10px 10px 10px 40px; border-top: 1px solid #f7f7f7; border-radius: 30px; -webkit-box-shadow: 0px 1px 1px 0px rgb(0 0 0 / 28%); box-shadow: 0px 1px 1px 0px rgb(0 0 0 / 28%);}
 .btn_login_google:hover{background-color: #eee;}
 
@@ -162,8 +162,9 @@ body{background: #202020;}
 .form_group .help-text{font-size: 11px; font-size: 1.1rem; color: #666;}
 .form_group .btn_area{margin: 10px 0;}
 .label_control{font-size: 13px; font-size: 1.3rem; font-weight: 600; line-height: 1.5; vertical-align: middle; margin-bottom: 10px; padding: 4px 0;}
-.form_control{display: inline-block; width: 100%; height: 32px; background: #fff; font-weight: 400; border: 1px solid #ddd; padding: 5px 5px;}
+.form_control{display: inline-block; width: 100%; height: 42px; background: #fff; border: 1px solid #ddd; padding: 7px 10px 5px 10px;}
 .input_group{margin-bottom: 10px;}
+.input_group .form_control{height: 34px; padding: 5px 5px;}
 .input_form{display: inline-block; position: relative; width: 100%; padding: 5px 0;}
 .input_form .time{position: absolute; top: 13px; right: 45px; color:#e21d19; font-size: 1.3rem; font-size: 13px; font-weight: 600;}
 .input_form .form_input_error{border: 1px solid #e21d19;}
@@ -176,8 +177,23 @@ body{background: #202020;}
 .input_width_sm {width: 25% !important; min-width: 145px !important;}
 .input_width_xs {width: 100px !important;}
 
+/* 
+    * [클립다운 PC 팝업] 클립다운 라이트 설치 확인
+*/
+/* Point Badge Style */
+.wrap_popup .badge_point{display: inline-block; position: relative; min-width: 78px; height: 28px; background: #e21d19; color: #fff; text-align: center; line-height: 1.5; border-radius: 30px; padding: 4px 4px 4px 29px; -webkit-touch-callout: none; user-select: none;}
+.wrap_popup .badge_point .icon_point{position: absolute; top:5px; left: 4px; width: 18px; height: 18px; background: #fff; color: #e21d19;  font-size: 14px; font-size: 1.4rem; font-weight: 700; line-height: 1; border-radius:50%; padding: 2px 4px;}
+.wrap_popup .badge_point .point_data{font-size: 14px; font-size: 1.4rem; font-weight: 700; line-height: 1.4; padding: 0 6px 0 0;}
 
-
+.wrap_popup .link_text{display: inline-block; color:#666; font-size: 11px; font-size: 1.1rem; text-decoration:none; padding-top: 10px;}
+.item_check_install{background: #f7f7f7; border: 1px solid #eee; padding: 20px 20px;}
+.item_check_install .content_text{font-weight: 600;}
+.info_box_app{background: #fff; border: 1px solid #e21d19; padding: 6px 10px; margin: 15px 0 20px 0;}
+.info_box_app{display: flex; align-items: center;}
+.info_box_app .item_left{display: flex; flex: 1; align-items: center;}
+.info_box_app .item_right{margin-left: auto;}
+.info_box_app .icon_launcher{position: relative; overflow: hidden; width: 36px; height: 36px; border-radius: 5px; box-shadow: 0 0 4px 0 rgba(0,0,0,0.25); margin-right: 10px;}
+.info_box_app .item_text{font-weight: 600;}
 
 
 
