--- a/clipdown/2023/webview/reward/popup_mobileAuth/resource/css/style.css
+++ b/clipdown/2023/webview/reward/popup_mobileAuth/resource/css/style.css
@@ -58,6 +58,7 @@ div,dl,dt,dd,h1,h2,h3,h4,h5,h6,form,fieldset,p,th,td,input,textarea,select,butto
 .btn:focus{box-shadow:none !important;}
 .login_mobileAuth .content_item{margin: 20px 0;}
 .login_mobileAuth .text_message p{font-size: 15px; font-size: 1.5rem; line-height: 1.5; padding-bottom: 15px;}
+.login_mobileAuth .text_message .guide_text{display: block; font-size: 13px; font-size: 1.3rem; padding-top: 10px; color: #666;}
 .login_mobileAuth .form_input_error{border: 1px solid #e21d19;}
 .login_mobileAuth .form_input_error::placeholder{color: #e21d19;}
 .login_mobileAuth .form_input_error:focus{outline: 0; outline-offset:0;}
@@ -98,3 +99,19 @@ div,dl,dt,dd,h1,h2,h3,h4,h5,h6,form,fieldset,p,th,td,input,textarea,select,butto
 .warp_popup .inner{position: relative; max-width: 398px; width: 100%; height:100%; margin: 0 auto;}
 .warp_popup .webview_box{background: #fff; padding: 25px 25px;}
 /* .warp_popup .webview_box .content_box{padding-bottom: 10px;} */
+
+.terms_agree_list{padding: 10px 0; margin: 15px 0 30px;}
+.terms_agree_list li.agree_item{position: relative; padding: 3px 0; text-align: left;}
+.terms_agree_list .checkbox{font-size: 13px; font-size: 1.3rem; line-height: initial; font-weight: 400; color: #20222B;}
+.terms_agree_list .terms_link{position: relative; top: -2px; float: right; line-height: 1; margin: 3px 0;}
+.terms_agree_list .terms_link .link_text{display: inline-block; color: #666; font-size: 11px; font-size: 1.1rem;}
+.list_box_border{border: 1px solid #eee; padding: 10px 10px;}
+
+/* checkbox style */
+.checkbox, .radio{display: inline-block; position: relative; padding-left: 20px; font-size: 13px; font-size: 1.3rem; font-weight: 400; line-height: 1.5; cursor: pointer;}
+.checkbox input, .radio input{position: absolute; z-index: -1; top:3px; left: 0; width:14px; height:14px; margin: 0; opacity: 0; filter: alpha(opacity = 0);}
+.checkbox span, .radio span{position: absolute; top: 2px; left: 0; width: 14px; height: 14px; border: 1px solid #fff; background: #fff;}
+.checkbox input:checked~span:after, .radio>input:checked~span:after{display: inline-block; margin-right: 15px; margin-bottom: 5px;}
+.checkbox span:after, .radio span:after{content: ''; display: block; position: absolute; }
+.checkbox span:after{top: -1px; left: 4px; width: 5px; height: 10px; border: solid #eee; border-width: 0 2px 2px 0; transform: rotate(45deg);}
+.checkbox input:checked~span:after{top: -1px; left: 4px; width: 5px; height: 10px; border: solid #e21d19; border-width: 0 2px 2px 0; transform: rotate(45deg);}
