--- a/clipdown/2023/webview/reward/resource/css/common.css
+++ b/clipdown/2023/webview/reward/resource/css/common.css
@@ -208,14 +208,15 @@ a.disabled{pointer-events: none;}
     min-width: 80px;	
     min-height: 28px; 
     background:transparent; 
-    color:#fff; 
+    color:#333; 
     font-size:13px; 
     font-size:1.3rem; 
     font-weight: 400; 
     text-align: center; 
     vertical-align: middle; 
     padding: 4px 5px; 
-    text-decoration: none; 
+    text-decoration: none;
+	text-underline-position: under; 
     cursor: pointer;
 }
 .btn-box{display:block; position:relative; vertical-align: middle;} /* single button */
